--- a/.github/workflows/self-contained.yml
+++ b/.github/workflows/self-contained.yml
@@ -8,7 +8,7 @@ jobs:
     container:
       image: docker:20.10
       env:
-        DOCKER_TLS_CERTDIR=/certs
+        DOCKER_TLS_CERTDIR: /certs
       volumes:
         - docker-certs-client-${{ github.run_id }}:/certs/client:ro
 
@@ -17,7 +17,7 @@ jobs:
       dind:
         image: docker:20.10-dind
         env:
-          DOCKER_TLS_CERTDIR=/certs
+          DOCKER_TLS_CERTDIR: /certs
         options: >-
           --privileged
           --network-alias docker
