--- a/.github/workflows/self-contained.yml
+++ b/.github/workflows/self-contained.yml
@@ -22,7 +22,7 @@ jobs:
           --privileged
           --network-alias docker
           --name dind
-          --detached
+          --detach
         volumes:
           - docker-certs-ca-${{ github.run_id }}:/certs/ca
           - docker-certs-client-${{ github.run_id }}:/certs/client
