--- a/.github/workflows/self-contained.yml
+++ b/.github/workflows/self-contained.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: kmatheny
     # Docker Hub image that `container-job` executes in
     container:
-      image: docker:22.06-rc
+      image: docker:20.10
       env:
         DOCKER_TLS_CERTDIR: /certs
       volumes:
