--- a/.github/workflows/self-contained.yml
+++ b/.github/workflows/self-contained.yml
@@ -21,6 +21,8 @@ jobs:
           DOCKER_TLS_CERTDIR: /certs
         options: >-
           --privileged
+        ports:
+          - 2376
         volumes:
           - docker-certs-ca-${{ github.run_id }}:/certs/ca
           - docker-certs-client-${{ github.run_id }}:/certs/client
