--- a/.github/workflows/self-contained.yml
+++ b/.github/workflows/self-contained.yml
@@ -28,6 +28,8 @@ jobs:
     steps:
       - name: Hostname
         run: hostname
+      - name: Sleepy
+        run: sleep 180s
       - name: Docker Info
         run: docker info
       - name: Docker Version
