--- a/.github/workflows/self-contained.yml
+++ b/.github/workflows/self-contained.yml
@@ -8,9 +8,9 @@ jobs:
     container:
       image: docker:20.10
       env:
-        DOCKER_HOST: tcp://dind:2376
+        DOCKER_HOST: tcp://docker:2376
         DOCKER_TLS_VERIFY: 1
-        DOCKER_TLS_CERTDI: /certs
+        DOCKER_CERT_PATH: /certs/client
       volumes:
         - docker-certs-client-${{ github.run_id }}:/certs/client:ro
 
@@ -23,6 +23,7 @@ jobs:
           DOCKER_CERT_PATH: /certs
         options: >-
           --privileged
+          --network-alias docker
         volumes:
           - docker-certs-ca-${{ github.run_id }}:/certs/ca
           - docker-certs-client-${{ github.run_id }}:/certs/client
