--- a/.github/workflows/self-contained.yml
+++ b/.github/workflows/self-contained.yml
@@ -8,7 +8,7 @@ jobs:
     container:
       image: docker:20.10
       env:
-        DOCKER_HOST: tcp://docker:2376
+        DOCKER_HOST: tcp://dind:2376
         DOCKER_TLS_VERIFY: 1
         DOCKER_CERT_PATH: /certs/client
       volumes:
@@ -19,11 +19,9 @@ jobs:
       dind:
         image: docker:22.06-rc-dind
         env:
-          # DOCKER_TLS_CERTDIR: /certs
           DOCKER_CERT_PATH: /certs
         options: >-
           --privileged
-          --network-alias docker
         volumes:
           - docker-certs-ca-${{ github.run_id }}:/certs/ca
           - docker-certs-client-${{ github.run_id }}:/certs/client
