--- a/.github/workflows/self-contained.yml
+++ b/.github/workflows/self-contained.yml
@@ -29,6 +29,8 @@ jobs:
     steps:
       - name: Hostname
         run: hostname
+      - name: Sleepy
+        run: sleep 5s
       - name: Docker Info
         run: docker info
       - name: Docker Version
