--- a/.github/workflows/self-contained.yml
+++ b/.github/workflows/self-contained.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Hostname
         run: hostname
       - name: Wait for Docker Host
-        run: sleep 600s
+        run: until docker version; do echo "Waitin for docker daemon..." && sleep 1s; done
       - name: Docker Info
         run: docker info
       - name: Docker Version
