--- a/modules/appeals_api/config/backstage/appeals-status.yaml
+++ b/modules/appeals_api/config/backstage/appeals-status.yaml
@@ -3,6 +3,7 @@ kind: API
 metadata:
   name: appeals-status-api
   description: Appeals Status APIs for VA Lighthouse program
+  title: Appeals Status API
   tags:
   - lighthouse
   - external
