add prod idme to settings

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -878,6 +878,7 @@ flipper:
     - james.childers@gcio.com
     - james.adams2@va.gov # Jim Adams designer on GCIO
     - jayson.perkins@adhocteam.us
+    - jaysonperkins51@gmail.com # Jayson Perkins, BE Engineer VA Mobile AdHoc
     - jeff.roof@adhocteam.us
     - jennie.mcgibney@va.gov
     - jesse.cohn@adhocteam.us
