--- a/config/features.yml
+++ b/config/features.yml
@@ -724,3 +724,7 @@ features:
   show_expandable_vamc_alert:
     actor_type: user
     description: Allows expandable alerts to be visible in vamc
+  show_digital_form_1095b:
+    actor_type: user
+    description: Enables access to digital 1095-B form download
+    enable_in_development: true
