--- a/modules/mobile/spec/support/vcr_cassettes/appointments/VAOS_v2/get_appointments_200.yml
+++ b/modules/mobile/spec/support/vcr_cassettes/appointments/VAOS_v2/get_appointments_200.yml
@@ -54,30 +54,181 @@ http_interactions:
       - max-age=63072000; includeSubDomains; preload
     body:
       encoding: UTF-8
-      string: '{"data":[{"id":"37060","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/vista/984/appointment/id","value":"3583;20210902.100000"}],"kind":"clinic","status":"cancelled","serviceType":"audiology","practitioners": [{  "identifier": [{  "system": "string",  "value": "1649678731"}  ],  "name": {"family": "string","given": [  "string"]  },  "address": {"type": "postal","line": [  "string"],"city": "string","state": "string","postalCode": "string","country": "string","text": "string"  }}],"patientIcn":"1012845331V153043","locationId":"984","clinic":"3583","start":"2021-09-02T14:00:00Z","cancellationReason":{"code":"other"},"cancelationReason":{"coding":[{"system":"http://terminology.hl7.org/CodeSystem/appointment-cancellation-reason","code":"pat","display":"The
-        appointment was cancelled by the patient"}]},"cancellable":false},{"id":"32237","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/vista/983/appointment/id","value":"707;20210903.094500"}],"kind":"clinic","status":"cancelled","serviceType":"foodAndNutrition","patientIcn":"1012845331V153043","locationId":"983","clinic":"707","start":"2021-09-03T15:45:00Z","cancellationReason":{"code":"other"},"cancelationReason":{"coding":[{"system":"http://terminology.hl7.org/CodeSystem/appointment-cancellation-reason","code":"pat","display":"The
-        appointment was cancelled by the patient"}]},"cancellable":false},{"id":"50059","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/vista/983/appointment/id","value":"308;20210903.140000"}],"kind":"clinic","status":"cancelled","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983","clinic":"308","start":"2021-09-03T20:00:00Z","cancellationReason":{"code":"other"},"cancelationReason":{"coding":[{"system":"http://terminology.hl7.org/CodeSystem/appointment-cancellation-reason","code":"pat","display":"The
-        appointment was cancelled by the patient"}]},"cancellable":false},{"id":"41121","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/vista/983/appointment/id","value":"923;20210906.100000"}],"kind":"clinic","status":"cancelled","patientIcn":"1012845331V153043","locationId":"983","clinic":"923","start":"2021-09-06T16:00:00Z","cancellationReason":{"code":"other"},"cancelationReason":{"coding":[{"system":"http://terminology.hl7.org/CodeSystem/appointment-cancellation-reason","code":"pat","display":"The
-        appointment was cancelled by the patient"}]},"cancellable":false},{"id":"50096","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/vista/983/appointment/id","value":"308;20210907.140000"}],"kind":"clinic","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983","clinic":"308","start":"2021-09-07T20:00:00Z","end":"2021-09-07T20:20:00Z","minutesDuration":20,"slot":{"id":"3230323130393037323030303A323032313039303732303230","start":"2021-09-07T20:00:00Z","end":"2021-09-07T20:20:00Z"},"cancellationReason":{"code":"other"},"cancellable":true},{"id":"43956","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/vista/983/appointment/id","value":"848;20210915.080000"}],"kind":"clinic","status":"cancelled","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983","clinic":"848","start":"2021-09-15T14:00:00Z","cancellationReason":{"code":"other"},"cancelationReason":{"coding":[{"system":"http://terminology.hl7.org/CodeSystem/appointment-cancellation-reason","code":"prov","display":"The
-        appointment was cancelled by the provider"}]},"cancellable":false},{"id":"50094","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a487fd67ba6a62d017bc0cc86d80002"}],"kind":"telehealth","status":"proposed","serviceType":"Primary
-        Care ","patientIcn":"1012845331V153043","locationId":"983","reason":"Test_SM
-        test (tele)","requestedPeriods":[{"start":"2021-09-08T12:00:00Z","end":"2021-09-08T23:59:59.999Z"}],"contact":{"telecom":[{"type":"phone","value":"9999999992"}]},"cancellationReason":{"code":"other"},"cancellable":true},{"id":"53352","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48a6147be6a5c2017be74b99220000"}],"kind":"phone","status":"proposed","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"984GB","reason":"New
-        Issue","requestedPeriods":[{"start":"2021-10-01T12:00:00Z","end":"2021-10-01T23:59:59.999Z"},{"start":"2022-01-03T12:00:00Z","end":"2022-01-03T23:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"judy.morrison@id.me"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Morning"],"cancellationReason":{"code":"other"},"cancellable":true},{"id":"50956","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48d8a47ba18356017ba7b8f666001c"}],"kind":"clinic","status":"proposed","serviceType":"socialWork","patientIcn":"1012845331V153043","locationId":"983HK","reason":"Routine
-        Follow-up","requestedPeriods":[{"start":"2021-09-28T00:00:00Z","end":"2021-09-28T11:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"Aarathi.poldass@va.gov"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Evening"],"cancellationReason":{"code":"other"},"cancellable":true},{"id":"50963","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48b4ef7ba184d5017bc5e9ecb20030"}],"kind":"phone","status":"proposed","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983GD","reason":"Medication
-        Concern","requestedPeriods":[{"start":"2021-09-13T00:00:00Z","end":"2021-09-13T11:59:59.999Z"},{"start":"2021-09-13T12:00:00Z","end":"2021-09-13T23:59:59.999Z"},{"start":"2021-09-14T12:00:00Z","end":"2021-09-14T23:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"marcy.nadeau@va.gov"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Afternoon","Evening","Morning"],"cancellationReason":{"code":"other"},"cancellable":true},{"id":"50961","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48d8a47ba18356017bc5e6cc2a002a"}],"kind":"clinic","status":"fulfilled","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983GC","reason":"New
-        Issue","requestedPeriods":[{"start":"2021-09-13T00:00:00Z","end":"2021-09-13T11:59:59.999Z"},{"start":"2021-09-13T12:00:00Z","end":"2021-09-13T23:59:59.999Z"},{"start":"2021-09-14T00:00:00Z","end":"2021-09-14T11:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"marcy.nadeau@va.gov"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Afternoon","Evening","Morning"],"cancellationReason":{"code":"other"},"cancellable":true},{"id":"50978","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48d8a47ba18356017bcb8717720039"}],"kind":"clinic","status":"fulfilled","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983GB","reason":"Routine
-        Follow-up","requestedPeriods":[{"start":"2021-09-15T12:00:00Z","end":"2021-09-15T23:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"judy.morrison@id.me"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Morning"],"cancellationReason":{"code":"other"},"cancellable":true},{"id":"53351","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48f8687be6a735017bea5ab97a0007"}],"kind":"clinic","status":"cancelled","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983","reason":"Medication
-        Concern","requestedPeriods":[{"start":"2022-01-13T00:00:00Z","end":"2022-01-13T11:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"Aarathi.poldass@va.gov"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Morning"],"cancellationReason":{"code":"other"},"cancellable":false},{"id":"50962","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48d8a47ba18356017bc5fb7d7d002c"}],"kind":"telehealth","status":"cancelled","serviceType":"audiology","patientIcn":"1012845331V153043","locationId":"983","reason":"Medication
-        Concern","requestedPeriods":[{"start":"2021-09-13T00:00:00Z","end":"2021-09-13T11:59:59.999Z"},{"start":"2021-09-13T12:00:00Z","end":"2021-09-13T23:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"mightykc70@gmail.com"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Afternoon"],"cancellationReason":{"code":"other"},"cancellable":false},{"id":"50077","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48b4ef7ba184d5017ba77f4ab20017"}],"kind":"clinic","status":"cancelled","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983","reason":"Routine
-        Follow-up","requestedPeriods":[{"start":"2021-09-07T00:00:00Z","end":"2021-09-07T11:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"marcy.nadeau@va.gov"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Morning"],"cancellationReason":{"code":"other"},"cancellable":false},{"id":"52954","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48d8a47ba18356017be161984c003b"}],"kind":"phone","status":"cancelled","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"984GA","reason":"Routine
-        Follow-up","requestedPeriods":[{"start":"2021-10-01T12:00:00Z","end":"2021-10-01T23:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"judy.morrison@id.me"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Morning"],"cancellationReason":{"code":"other"},"cancellable":false},{"id":"50093","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a487fd67ba6a62d017bc0c8f6730001"}],"kind":"clinic","status":"cancelled","serviceType":"primary
-        care","patientIcn":"1012845331V153043","locationId":"983","reason":"Test_SM
-        test","requestedPeriods":[{"start":"2021-09-07T12:00:00Z","end":"2021-09-07T23:59:59.999Z"}],"contact":{"telecom":[{"type":"phone","value":"9999999991"}]},"cancellationReason":{"code":"other"},"cancellable":false},{"id":"50979","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a487fcd7ba1835c017bc882c19c002e"}],"kind":"clinic","status":"cancelled","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983HK","reason":"Routine
-        Follow-up","requestedPeriods":[{"start":"2021-09-22T12:00:00Z","end":"2021-09-22T23:59:59.999Z"},{"start":"2021-09-24T12:00:00Z","end":"2021-09-24T23:59:59.999Z"},{"start":"2021-09-27T00:00:00Z","end":"2021-09-27T11:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"judy.morrison@id.me"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Afternoon"],"cancellationReason":{"code":"other"},"cancellable":false},{"id":"50960","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48ebfe7ba184d4017bc5ffbb6e0033"}],"kind":"telehealth","status":"cancelled","serviceType":"audiology","patientIcn":"1012845331V153043","locationId":"983","reason":"Routine
-        Follow-up","requestedPeriods":[{"start":"2021-09-13T00:00:00Z","end":"2021-09-13T11:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"marcy.nadeau@va.gov"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Afternoon"],"cancellationReason":{"code":"other"},"cancellable":false},{"id":"50957","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48ebfe7ba184d4017ba7e00d270026"}],"kind":"clinic","status":"cancelled","serviceType":"audiology","patientIcn":"1012845331V153043","locationId":"983","reason":"Routine
-        Follow-up","requestedPeriods":[{"start":"2021-09-22T00:00:00Z","end":"2021-09-22T11:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"Aarathi.poldass@va.gov"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Morning"],"cancellationReason":{"code":"other"},"cancellable":false},{"id":"50101","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a487fd67ba6a62d017bc101fd390007"}],"kind":"clinic","status":"cancelled","serviceType":"mental
-        health","patientIcn":"1012845331V153043","locationId":"983","reason":"Test///-SM(clinic_prop)","requestedPeriods":[{"start":"2021-09-07T12:00:00Z","end":"2021-09-07T23:59:59.999Z"}],"contact":{"telecom":[{"type":"phone","value":"9999999998"}]},"cancellationReason":{"code":"other"},"cancellable":false},{"id":"50066","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a487fcd7ba1835c017ba6bb1eaf0010"}],"kind":"phone","status":"cancelled","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983","reason":"New
-        Issue","requestedPeriods":[{"start":"2021-09-13T00:00:00Z","end":"2021-09-13T11:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"marcy.nadeau@va.gov"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Afternoon"],"cancellationReason":{"code":"other"},"cancellable":false},{"id":"50067","identifier":[{"system":"http://med.va.gov/fhir/urn/vaos/ars/id","value":"8a48b4ef7ba184d5017ba68a3bd70010"}],"kind":"phone","status":"cancelled","serviceType":"primaryCare","patientIcn":"1012845331V153043","locationId":"983","reason":"New
-        Issue","requestedPeriods":[{"start":"2021-09-07T00:00:00Z","end":"2021-09-07T11:59:59.999Z"}],"contact":{"telecom":[{"type":"email","value":"marcy.nadeau@va.gov"},{"type":"phone","value":"7175555555"}]},"preferredTimesForPhoneCall":["Afternoon"],"cancellationReason":{"code":"other"},"cancellable":false}]}'
+      string: '{
+     "data":[{
+              "id":"57972",
+              "identifier":[
+                 {
+                    "system":"http://med.va.gov/fhir/urn/vaos/hsrm/id",
+                    "value":"12636"
+                 }
+              ],
+              "kind":"cc",
+              "status":"cancelled",
+              "serviceType":"optometry",
+              "patientIcn":"1012845331V153043",
+              "locationId":"983",
+              "practitioners":[
+                 {
+                    "identifier":[
+                       {
+                          "system":"http://hl7.org/fhir/sid/us-npi",
+                          "value":"1669462701"
+                       }
+                    ],
+                    "address":{
+                       "type":"physical",
+                       "line":[
+                          "31-75 23RD ST"
+                       ],
+                       "city":"LONG ISLAND CITY",
+                       "state":"NY",
+                       "postalCode":"11106",
+                       "text":"31-75 23RD ST,LONG ISLAND CITY,NY,11106"
+                    }
+                 }
+              ],
+              "created":"2022-06-29T14:30:00Z",
+              "requestedPeriods":[
+                 {
+                    "start":"2022-07-05T00:00:00Z"
+                 },
+                 {
+                    "start":"2022-10-27T00:00:00Z"
+                 }
+              ],
+              "contact":{
+                 "telecom":[
+                    {
+                       "type":"phone",
+                       "value":"3174485062"
+                    },
+                    {
+                       "type":"email",
+                       "value":"Aarathi.poldass@va.gov"
+                    }
+                 ]
+              },
+              "preferredTimesForPhoneCall":[
+                 "Morning",
+                 "Afternoon"
+              ],
+              "preferredLocation":{
+                 "city":"New York",
+                 "state":"NY"
+              },
+              "cancelationReason":{
+                 "coding":[
+                    {
+                       "system":"http://terminology.hl7.org/CodeSystem/appointment-cancellation-reason",
+                       "code":"pat",
+                       "display":"The appointment was cancelled by the patient"
+                    }
+                 ]
+              },
+              "preferredLanguage":"English",
+              "cancellable":false,
+              "extension":{
+                 "ccLocation":{
+                    "address":{
+                       
+                    }
+                 },
+                 "ccRequestedCancellation":true,
+                 "hsrmTaskId":"12636"
+              },
+              "location":{
+                 "id":"984",
+                 "type":"appointments",
+                 "attributes":{
+                    "id":"984",
+                    "vistaSite":"984",
+                    "vastParent":"984",
+                    "type":"va_health_facility",
+                    "name":"Dayton VA Medical Center",
+                    "classification":"VA Medical Center (VAMC)",
+                    "timezone":{
+                       "timeZoneId":"America/New_York"
+                    },
+                    "lat":39.74935,
+                    "long":-84.2532,
+                    "website":"https://www.dayton.va.gov/locations/directions.asp",
+                    "phone":{
+                       "main":"937-268-6511"
+                    },
+                    "physicalAddress":{
+                       "type":"physical",
+                       "line":[
+                          "4100 West Third Street"
+                       ],
+                       "city":"Dayton",
+                       "state":"OH",
+                       "postalCode":"45428-9000"
+                    },
+                    "healthService":[
+                       "Audiology",
+                       "Cardiology",
+                       "DentalServices",
+                       "Dermatology",
+                       "Gastroenterology",
+                       "Gynecology",
+                       "MentalHealthCare",
+                       "Nutrition",
+                       "Ophthalmology",
+                       "Optometry",
+                       "Orthopedics",
+                       "Podiatry",
+                       "PrimaryCare",
+                       "SpecialtyCare",
+                       "Urology",
+                       "WomensHealth"
+                    ]
+                 }
+              }
+           },
+              {
+           "id":"31952",
+           "identifier":[
+              {
+                 "system":"http://med.va.gov/fhir/urn/vaos/vista/983/appointment/id",
+                 "value":"898;20210107.080000"
+              }
+           ],
+           "kind":"clinic",
+           "status":"cancelled",
+           "service_type":"socialWork",
+           "patient_icn":"1012845331V153043",
+           "location_id":"983",
+           "clinic":"570",
+           "start":"2021-01-07T15:00:00Z",
+           "cancelation_reason":{
+              "coding":[
+                 {
+                    "system":"http://terminology.hl7.org/CodeSystem/appointment-cancellation-reason",
+                    "code":"pat",
+                    "display":"The appointment was cancelled by the patient"
+                 }
+              ]
+           },
+           "cancellable":false,
+           "extension":{
+              "cc_location":{
+                 "address":{
+                    
+                 }
+              },
+              "vista_status":[
+                 "CANCELLED BY PATIENT",
+                 "NO ACTION TAKEN",
+                 "ACT REQ/CHECKED OUT",
+                 "ACT REQ/CHECKED IN",
+                 "CANCELLED BY CLINIC",
+                 "NO ACTION TAKEN/TODAY",
+                 "FUTURE"
+              ]
+           }
+        }
+     ]
+}'
   recorded_at: Thu, 04 Nov 2021 19:56:46 GMT
 recorded_with: VCR 6.0.0
