--- a/modules/mobile/spec/support/vcr_cassettes/appointments/VAOS_v2/get_appointment_200_cc_booked.yml
+++ b/modules/mobile/spec/support/vcr_cassettes/appointments/VAOS_v2/get_appointment_200_cc_booked.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://veteran.apps.va.gov/vaos/v1/patients/1012846043V576341/appointments/70060
+    uri: https://veteran.apps.va.gov/vaos/v1/patients/1012846043V576341/appointments?end=2023-01-01T00:00:00Z&pageSize=0&start=2021-01-01T00:00:00Z
     body:
       encoding: US-ASCII
       string: ''
@@ -56,6 +56,59 @@ http_interactions:
       - max-age=63072000; includeSubDomains; preload
     body:
       encoding: UTF-8
-      string: '{"data":{"id": "121133", "identifier": [{"system": "http://med.va.gov/fhir/urn/vaos/vista/983/appointment/id", "value": "999;20220827.094500"}], "kind": "clinic", "status": "cancelled", "service_type": "optometry", "patient_icn": "1012846043V576341", "location_id": "983", "clinic": "999", "start": "2022-08-27T15:45:00Z", "cancelation_reason": {"coding": [{"system": "http://terminology.hl7.org/CodeSystem/appointment-cancellation-reason", "code": "pat", "display": "The appointment was cancelled by the patient"}]}, "cancellable": false, "extension": {"cc_location": {"address": {}}, "vista_status": ["CANCELLED BY PATIENT", "FUTURE"]}}}'
+      string: '{"data":[
+      {
+   "id":"88063",
+   "identifier":[
+      {
+         "system":"http://med.va.gov/fhir/urn/vaos/hsrm/id",
+         "value":"256471||222||1"
+      },
+      {
+         "system":"http://hl7.org/fhir/sid/us-npi",
+         "value":"1346206547"
+      }
+   ],
+   "kind":"cc",
+   "status":"booked",
+   "description":"Cardiology Testing SEOC 1.6.7 PRCT REV",
+   "patient_icn":"1012846043V576341",
+   "location_id":"984",
+   "practitioners":[
+      {
+         "name":{
+            "family":"HEALTH CARE PROFS",
+            "given":[
+               "A & D"
+            ]
+         }
+      }
+   ],
+   "start":"2022-03-31T14:00:00Z",
+   "created":"2022-03-16T16:38:35Z",
+   "cancellable":true,
+   "extension":{
+      "cc_location":{
+         "address":{
+            "line":[
+               "1601 Needmore Rd Ste 1"
+            ],
+            "city":"Dayton",
+            "state":"OH",
+            "postal_code":"45414",
+            "text":"1601 Needmore Rd Ste 1\nDayton OH 45414"
+         },
+         "telecom":[
+            {
+               "system":"phone",
+               "value":"9372366750"
+            }
+         ]
+      },
+      "hsrm_task_id":"",
+      "hsrm_consult_id":"984_643523"
+   }
+}
+      ]}'
   recorded_at: Mon, 13 Dec 2021 23:28:26 GMT
 recorded_with: VCR 6.0.0
