Add logging and fix combined FSR bug

--- a/config/form_profile_mappings/5655.yml
+++ b/config/form_profile_mappings/5655.yml
@@ -1,5 +1,5 @@
 personalIdentification:
-  ssn: [identity_information, ssn_last_four]
+  ssn: [identity_information, ssn]
   fileNumber: [va_file_number_last_four]
 personalData:
   veteranFullName: [identity_information, full_name]
