--- a/config/features.yml
+++ b/config/features.yml
@@ -558,6 +558,10 @@ features:
     actor_type: user
     description: Notifies MAS service that a MAS-relevant claim has come through
     enable_in_development: true
+  rrd_mas_all_claims_notification:
+    actor_type: user
+    description: Notifies MAS service of all MAS-eligible claims that have come through
+    enable_in_development: true
   rrd_hypertension_mas_notification:
     actor_type: user
     description: Notifies MAS service of single-issue hypertension claims
