--- a/chart/templates/hpa.yml
+++ b/chart/templates/hpa.yml
@@ -4,6 +4,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ .Values.appName }}-web
+  namespace: {{ .Release.Namespace }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -11,7 +12,11 @@ spec:
     name: {{ .Values.appName }}-web
   minReplicas: {{ .Values.web.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.web.autoscaling.maxReplicas }}
-  targetCPUUtilizationPercentage: {{ .Values.web.autoscaling.targetCPUUtilizationPercentage }}
+  metrics:
+  - type: External
+    external:
+      metricName: datadogmetric@{{ .Release.Namespace }}:puma-backlog
+      targetAverageValue: 16
 {{- end }}
 
 ---
@@ -20,6 +25,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ .Values.appName }}-sidekiq
+  namespace: {{ .Release.Namespace }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -27,6 +33,11 @@ spec:
     name: {{ .Values.appName }}-sidekiq
   minReplicas: {{ .Values.worker.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.worker.autoscaling.maxReplicas }}
-  targetCPUUtilizationPercentage: {{ .Values.worker.autoscaling.targetCPUUtilizationPercentage }}
+  metrics:
+  - type: External
+    external:
+      metricName: datadogmetric@{{ .Release.Namespace }}:sidekiq-queue
+      targetAverageValue: 16
+
 {{- end }}
 
