--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1071,6 +1071,15 @@ hqva_mobile:
 # settings va.gov uses related to lighthouse api's
 lighthouse:
   api_key: fake_key
+  benefits_claims:
+    host: https://sandbox-api.va.gov
+    path: '/services/claims/v2/veterans'
+    aud_claim_url: https://deptva-eval.okta.com/oauth2/ausdg7guis2TYDlFe2p7/v1/token
+    client_id: 0oaj7q9k0sGIrkXZC2p7
+    pem: config/certs/key.pem
+    api_scope:
+      - "claim.read"
+      - "claim.write"
   benefits_reference_data:
     url: https://sandbox-api.va.gov
     path: services/benefits-reference-data
