API-6969 Add monthly appeals stats report
Sets up a monthly emailed report of mean/median status transition times
for appeals records

--- a/config/features.yml
+++ b/config/features.yml
@@ -244,6 +244,9 @@ features:
   decision_review_daily_stuck_records_report_enabled:
     actor_type: user
     description: Enables the daily decision review stuck records Slack report
+  decision_review_monthly_stats_report_enabled:
+    actor_type: user
+    description: Enables the monthly decision review stats report email
   dependency_verification:
     actor_type: user
     description: Feature gates the dependency verification modal for updating the diaries service.
