--- a/modules/vaos/app/docs/vaos/v2/vaos_v2.yaml
+++ b/modules/vaos/app/docs/vaos/v2/vaos_v2.yaml
@@ -824,6 +824,8 @@ components:
           "$ref": "#/components/schemas/TelehealthInfo"
         extension:
           "$ref": "#/components/schemas/AppointmentExtensions"
+        preferredProviderName:
+          type: string
     AppointmentExtensions:
       type: object
       properties:
