--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1440,6 +1440,7 @@ lgy:
   mock_coe: true
 
 form526_backup:
+  enabled: false
   # Can be single or multi, to send 1 payload or many, to central mail
   submission_method: 'single'
   api_key: ~
