--- a/chart/templates/worker-deployment.yaml
+++ b/chart/templates/worker-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Values.appName }}-sidekiq
   name: {{ .Values.appName }}-sidekiq
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace }}-{{ .Values.target_env }}
 spec:
   revisionHistoryLimit: 1
   selector:
