--- a/chart/templates/external-dns.yaml
+++ b/chart/templates/external-dns.yaml
@@ -3,7 +3,7 @@ apiVersion: externaldns.k8s.io/v1alpha1
 kind: DNSEndpoint
 metadata:
   name: {{ .Values.appName }}-web
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace }}-{{ .Values.target_env }}
 spec:
   endpoints:
   - dnsName: {{ .Values.web.externalDns.dnsName }}
