--- a/chart/templates/hpa.yml
+++ b/chart/templates/hpa.yml
@@ -4,7 +4,7 @@ apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ .Values.appName }}-web
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace }}-{{ .Values.target_env }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
