--- a/chart/templates/lighthouse-pre-configs.yaml
+++ b/chart/templates/lighthouse-pre-configs.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace }}-{{ .Values.target_env }}
   name: {{ .Values.common.lighthousePreConfigs.name }}
   annotations:
     argocd.argoproj.io/hook: PreSync
