--- a/chart/templates/sa.yaml
+++ b/chart/templates/sa.yaml
@@ -12,5 +12,5 @@ metadata:
     app.kubernetes.io/name: {{ .Values.serviceAccount.name }}
     app.kubernetes.io/part-of: {{ .Values.serviceAccount.name }}
   name: {{ .Values.serviceAccount.name }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace }}-{{ .Values.target_env }}
 {{- end }}
