--- a/chart/templates/server-service.yaml
+++ b/chart/templates/server-service.yaml
@@ -7,7 +7,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.appName }}-web
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace }}-{{ .Values.target_env }}
   labels:
     app_name: {{ .Values.appName }}-web
   annotations:
