--- a/chart/templates/settings-configmap.yaml
+++ b/chart/templates/settings-configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace }}-{{ .Values.target_env }}
   creationTimestamp: null
   name: {{ .Values.common.configMap.name }}
   annotations:
